--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,5 +1,5 @@
 <section class="author">
-    <div class="authorimage" style="background: url({{ .Site.BaseURL }}img/avatar.jpg)"></div>
+    <div class="authorimage" style="background: url({{ .Site.BaseURL }}img/avatar.png)"></div>
     <h4>{{ .Site.Params.name }}</h4>
     <p class="bio">{{  .Site.Params.bio | markdownify }}</p>
     <p class="meta">
