add email as contact option

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,6 +10,7 @@
 		    {{ with .Site.Params.linkedin }}
 		    <a href="//linkedin.com/in/{{ . }}" target="_blank" title="Linkedin"><i class="fa fa-2x fa-fw fa-linkedin"></i> <span class="hidden">Linkedin</span></a>&nbsp;
 		    {{ end }}
+		    <a id="email" href="#" title="Email"><i class="fa fa-2x fa-fw fa-envelope-o"></i> <span class="hidden">Email</span></a>
 		    <a href="{{ .RSSlink }}" target="_blank" title="RSS"><i class="fa fa-2x fa-fw fa-rss"></i> <span class="hidden">RSS</span></a>
 		</section>
 
