--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -27,7 +27,7 @@
             {{ partial "mailchimp" . }}
 
 			{{ if eq .Site.Params.comments "disqus" }}
-	        	{{ template "partials/disqus.html" . }}
+	        	{{ template "_internal/disqus.html" . }}
 	        {{ end }}
 			
 			{{ if eq .Site.Params.comments "googleplus" }}
