--- a/layouts/partials/mailchimp.html
+++ b/layouts/partials/mailchimp.html
@@ -8,7 +8,7 @@
 <div id="mc_embed_signup">
 <form action="//davidnix.us12.list-manage.com/subscribe/post?u=28ffb7266ffbe0d683dc8c9bc&amp;id=befe672938" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-    <h2>Don't miss a post!</h2>
+    <p>Subscribe to be notified of new posts.</p>
 <div class="mc-field-group">
     <label for="mce-EMAIL">Email Address </label>
     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
