--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,3 +1,4 @@
+<script src="//load.sumome.com/" data-sumo-site-id="0945ff6d50548763966f9b62063dcbab9bef10cae6792d89e340cede5b8592be" async="async"></script>
 <script type="text/javascript">window.Prod = window.location.hostname != "localhost";</script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/smooth-scroll.min.js"></script>
